--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
       <h1 class="project-name">Simple Gid+</h1>
       <h2 class="project-tagline">A simple and lightweight CSS grid system.</h2>
       <a href="https://github.com/HostByBelle/Simple-Grid-Plus" class="btn"
-        >View on GitHub</a
-      >
+        >View on GitHub</a>
+      <a href="https://github.com/HostByBelle/Simple-Grid-Plus/releases" class="btn"
+      >Releases</a>
     </section>
 
     <section class="main-content">
