Fixed a typo, added other info

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8" />
-    <title>Simple Gid+</title>
+    <title>Simple Grid+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#157878" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -32,7 +32,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Simple Gid+</h1>
+      <h1 class="project-name">Simple Grid+</h1>
       <h2 class="project-tagline">
         A simple and lightweight CSS grid & positioning system.
       </h2>
@@ -54,11 +54,11 @@
           href="#simple-grid"
           aria-hidden="true"
           ><span class="octicon octicon-link"></span></a
-        >Simple Gid+
+        >Simple Grid+
       </h1>
 
       <p>
-        Simple Gid+ provides you with a lightweight and responsive CSS grid &
+        Simple Grid+ provides you with a lightweight and responsive CSS grid &
         utility components for easier front-end development. It also includes
         some utilities for controlling placement of items.
       </p>
@@ -294,7 +294,7 @@
       </p>
 
       <pre>
-        
+
         &lt;div class=&quot;grid-example&quot;&gt;
           &lt;div class=&quot;row&quot;&gt;
             &lt;div class=&quot;col&quot;&gt;
@@ -319,6 +319,37 @@
           </div>
         </div>
       </div>
+
+      <hr />
+
+      <h2>
+        <a
+          id="user-content-header-1"
+          class="anchor"
+          href="#breakpoints"
+          aria-hidden="true"
+          ><span class="octicon octicon-link"></span></a
+        >Breakpoints
+      </h2>
+
+      <ul>
+        <li><code>sm</code>: 33.75em (540px)</li>
+        <li><code>md</code>: 45em (720px)</li>
+        <li><code>lg</code>: 60em (960px)</li>
+        <li><code>xlg</code>: 75em (1200px)</li>
+      </ul>
+
+      <h2>
+        <a
+          id="user-content-header-1"
+          class="anchor"
+          href="#utility"
+          aria-hidden="true"
+          ><span class="octicon octicon-link"></span></a
+        >Utility
+      </h2>
+
+      <p>Simple Grid+ provides placement classes much like bootstrap. These include margin, padding, and gap. Examples: <code>gap-3</code>, <code>m-2</code>, <code>p-3</code>, <code>mr-2</code>.</p>
 
       <hr />
 
